--- a/app/views/admin/site/index.html.erb
+++ b/app/views/admin/site/index.html.erb
@@ -5,7 +5,11 @@
 
 <%= render partial: 'email', layout: 'modal_card', locals: { title: 'E-mail', subtitle: nil } %>
 
-<%= render partial: 'settings', layout: 'modal_card', locals: { title: 'Settings', subtitle: nil }%>
+<%= render partial: 'settings', layout: 'modal_card', locals: { title: 'Features', subtitle: nil }%>
+
+<%= render partial: 'hands', layout: 'modal_card', locals: { title: 'Hands', subtitle: nil }%>
+
+<%= render partial: 'grading', layout: 'modal_card', locals: { title: 'Grading', subtitle: nil }%>
 
 <%= render partial: 'webdav', layout: 'modal_card', locals: { title: 'Archiving', subtitle: nil }%>
 
