--- a/app/views/overviews/_tabs.html.erb
+++ b/app/views/overviews/_tabs.html.erb
@@ -1,74 +1,20 @@
 <% content_for :navbar_items do %>
 
 <div id="schedule-navbar-items" class="d-flex flex-wrap">
+  <%= render 'schedule_dropdown' %>
 
-	<% if @accessible_schedules.size > 1 %>
-	<div class="dropdown">
-		<button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="overviewScheduleDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-			<%= @name %>
-		</button>
-		<div class="dropdown-menu" aria-labelledby="overviewScheduleDropdown">
-			<% @accessible_schedules.each do |schedule| %>
-			<%= link_to schedule.name, overview_path(schedule), class: "dropdown-item" + class_if(schedule == @selected_schedule, "active") %>
-			<% end %>
-		</div>
-	</div>
-	<% end %>
-	
-	<% if current_user.senior? %>
-	<div class="btn-group" role="group" aria-label="Basic example">
-		<%= link_to "Active #{@active_count}", { status: 'active' }, class: 'btn btn-sm' + class_if_else(params[:status] == 'active', 'btn-primary', 'btn-outline-primary') %>
-		<%= link_to "Registered #{@registered_count}", { status: 'registered' }, class: 'btn btn-sm' + class_if_else(params[:status] == 'registered', 'btn-primary', 'btn-outline-primary') %>
-		<%= link_to "Inactive #{@inactive_count}", { status: 'inactive' }, class: 'btn btn-sm' + class_if_else(params[:status] == 'inactive', 'btn-primary', 'btn-outline-primary') %>
-		<%= link_to "Done #{@done_count}", { status: 'done' }, class: 'btn btn-sm' + class_if_else(params[:status] == 'done', 'btn-primary', 'btn-outline-primary') %>
-	</div>
-	<% end %>
+  <% if current_user.senior? %>
+  <div class="btn-group" role="group" aria-label="Basic example">
+    <%= link_to "Active #{@active_count}", { status: 'active' }, class: 'btn btn-sm' + class_if_else(params[:status] == 'active', 'btn-primary', 'btn-outline-primary') %>
+    <%= link_to "Registered #{@registered_count}", { status: 'registered' }, class: 'btn btn-sm' + class_if_else(params[:status] == 'registered', 'btn-primary', 'btn-outline-primary') %>
+    <%= link_to "Inactive #{@inactive_count}", { status: 'inactive' }, class: 'btn btn-sm' + class_if_else(params[:status] == 'inactive', 'btn-primary', 'btn-outline-primary') %>
+    <%= link_to "Done #{@done_count}", { status: 'done' }, class: 'btn btn-sm' + class_if_else(params[:status] == 'done', 'btn-primary', 'btn-outline-primary') %>
+  </div>
+  <% end %>
 
-	<% if current_user.senior? %>
-	<div class="btn-group" role="group">
-
-		<div class="btn-group" role="group">
-			<button id="overviewActionsDropdown" type="button" class="btn btn-sm btn-outline-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-				<%= bootstrap_icon 'check' %> <span class="caret"></span>
-			</button>
-			<div class="dropdown-menu dropdown-menu-end" aria-labelledby="overviewActionsDropdown">
-				<% if current_user.senior? %>
-				<%= link_to "Publish what's done".html_safe, publish_finished_schedule_grades_path(schedule_slug: @selected_schedule), method: 'post', data: { confirm:'Are you sure?' }, class:"dropdown-item" %>
-				<% end %>
-				<% if current_user.admin? %>
-				<%= link_to 'Publish my grades, even if not done'.html_safe, publish_my_schedule_grades_path(schedule_slug: @selected_schedule), method: 'post', data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
-				<%= link_to "Publish everything that's a valid grade".html_safe, publish_all_schedule_grades_path(schedule_slug: @selected_schedule), method: 'post', data: { confirm:'DANGEROUS, this even publishes stuff that is not done. Are you sure?' }, class:"dropdown-item"  %>
-				<% if Schedule.any? %>
-				<div class="dropdown-divider"></div>
-				<%= link_to 'Notify students who did not submit yet'.html_safe, form_for_missing_schedule_submits_path(schedule_slug: @selected_schedule), class:"dropdown-item", target: 'modal'  %>
-				<% end %>
-				<% end %>
-				<% if current_user.admin? && current_schedule.defines_final_grades? %>
-				<div class="dropdown-divider"></div>
-				<%= link_to 'Calculate all final grades', assign_all_final_schedule_grades_path(schedule_slug: @selected_schedule), method: :put, data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
-				<% current_schedule.grading_config.final_grade_names.each do |grade_name| %>
-				<%= link_to "Calculate final grades of type #{grade_name.humanize}", assign_all_final_schedule_grades_path(schedule_slug: @selected_schedule, grades: grade_name), method: :put, data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
-				<% end %>
-				<% end %>
-			</div>
-		</div>
-
-		<% if @selected_schedule && current_user.admin? %>
-		<div class="btn-group" role="group">
-			<button id="overviewGroupsDropdown" type="button" class="btn btn-sm btn-outline-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-				<%= bootstrap_icon 'people' %> <span class="caret"></span>
-			</button>
-
-			<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="overviewGroupsDropdown">
-				<%= link_to 'Import Groups'.html_safe, new_schedule_import_groups_path(schedule_slug: @selected_schedule), target: 'modal', class:"dropdown-item" %>
-				<%= link_to 'Generate Groups'.html_safe, new_schedule_generate_groups_path(schedule_slug: @selected_schedule), target: 'modal', class:"dropdown-item" %>
-				<%= link_to 'Add Group'.html_safe, new_schedule_add_group_path(schedule_slug: @selected_schedule), target: 'modal', class:"dropdown-item" %>
-			</ul>
-		</div>
-		<% end %>
-
-	</div>
-	<% end %>
+  <% if @selected_schedule %>
+  <%= render partial: 'schedule_operations', locals: { schedule: @selected_schedule } %>
+  <% end %>
 </div>
 
 <% end %>
