show description for schedules

--- a/app/views/admin/course/_registration.html.erb
+++ b/app/views/admin/course/_registration.html.erb
@@ -1,16 +1,19 @@
 <table class="table table-sm table-borderless">
-	<% Schedule.all.each do |schedule| %>
-	<tr>
-		<td>
-			<%= checkbox_for(schedule, :self_register, schedule.self_register, admin_course_schedule_registration_path(id: schedule.id)) do %>
-			<%= schedule.name %>
-			<% end %>
-		</td>
-		<td>
-			<%= checkbox_for(schedule, :self_service, schedule.self_service, admin_course_schedule_self_service_path(id: schedule.id)) do %>
-			students may browse modules
-			<% end %>
-		</td>
-	</tr>
-	<% end %>
+  <% Schedule.all.each do |schedule| %>
+    <tr>
+      <td>
+        <%= checkbox_for(schedule, :self_register, schedule.self_register, admin_course_schedule_registration_path(id: schedule.id)) do %>
+          <%= schedule.name %>
+        <% end %>
+      </td>
+      <td>
+        <%= checkbox_for(schedule, :self_service, schedule.self_service, admin_course_schedule_self_service_path(id: schedule.id)) do %>
+          students may browse modules
+        <% end %>
+      </td>
+    </tr>
+    <% if schedule.description.present? %>
+      <tr><td colspan="2" class="ps-4"><%= schedule.description %></td></tr>
+    <% end %>
+  <% end %>
 </table>
