fix grade presentation

--- a/app/views/items/_submit.html.erb
+++ b/app/views/items/_submit.html.erb
@@ -41,7 +41,7 @@
                	<% end %>
         </ul>
 
-        <% if grade.comments %>
+        <% if grade.comments.present? %>
             <h6>Comments:</h6>
             <%= simple_markdown(grade.comments) %>
         <% end %>
