--- a/app/views/overviews/_schedule_dropdown.html.erb
+++ b/app/views/overviews/_schedule_dropdown.html.erb
@@ -1,4 +1,4 @@
-<% if !Settings.grading_single_overview_page && @accessible_schedules.size > 1 %>
+<% if !present_single_overview? && @accessible_schedules.size > 1 %>
   <div class="dropdown">
     <button
       class="btn btn-primary btn-sm dropdown-toggle"
